# fbthrift

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeThriftGen.txt  CONTRIBUTING.md  LICENSE  PATENTS  Qatar Airways Argentina  Qatar Airways Canada  README  README.md  ThriftLibrary.cmake
thrift/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTORS  Makefile.am  README  README.md  aclocal.m4  configure.ac  deps.sh  deps_centos.sh  semantic.cache
thrift/annotation/: CMakeLists.txt  api.thrift  cpp.thrift  hack.thrift  internal.thrift  java.thrift  meta.thrift  python.thrift  rust.thrift  scope.thrift  thrift.thrift
thrift/cmake/: FBThriftConfig.cmake.in  FindBISON.cmake  FindDoubleConversion.cmake  FindFolly.cmake  FindGMock.cmake  FindGlog.cmake  FindKrb5.cmake  FindMstch.cmake  FindWangle.cmake  FindYarpl.cmake  FindZlib.cmake  FindZstd.cmake
thrift/common/: tree_printer.h  universal_name.cc
thrift/common/test/: universal_name_test.cc
thrift/compiler/: CMakeLists.txt  Makefile.am  README  README.md  TARGETS  common.cc  common.h  compiler.cc  compiler.h  compiler.pxd  compiler.pyi  compiler.pyx  diagnostic.cc  diagnostic.h  filesystem.cc  filesystem.h  globals.h  main.cc  main.h  main.py  mutator.cc  mutator.h  parsing_driver.cc  parsing_driver.h  platform.cc  platform.h  portability.h  semantic.cache  source_location.cc  source_location.h  thriftl.ll  thrifty.hh  thrifty.yy  thrifty.yy.h  util.cc  util.h  validator.cc  validator.h  visitor.cc  visitor.h
thrift/compiler/ast/: alias_span.h  alias_span_test.cc  ast_visitor.cc  ast_visitor.h  ast_visitor_test.cc  base_types.cc  base_types.h  diagnostic.cc  diagnostic.h  diagnostic_context.h  diagnostic_context_test.cc  diagnostic_test.cc  endianness.h  name_index.h  name_index_test.cc  node_list.h  source_range.cc  source_range.h  source_range_test.cc  t_annotated.cc  t_annotated.h  t_base_type.cc  t_base_type.h  t_const.cc  t_const.h  t_const_value.cc  t_const_value.h  t_container.h  t_doc.h  t_enum.cc  t_enum.h  t_enum_value.h  t_exception.h  t_field.h  t_function.cc  t_function.h  t_include.h  t_interaction.h  t_interface.cc  t_interface.h  (+37 more)
thrift/compiler/codemod/: annotate_allow_legacy_missing_uris.cc  annotate_allow_unsafe_non_sealed_key_type.cc  annotate_custom_default_optional_fields.cc  annotate_deprecated_terse_writes_fields.cc  annotate_deprecated_terse_writes_fields_test.py  annotate_non_optional_cpp_ref_fields.cc  annotate_non_optional_cpp_ref_fields_test.py  annotate_required_fields.cc  codemod.cc  cppref_to_structured.cc  cppref_to_structured_test.py  file_manager.cc  file_manager.h  migrate_php_namespace_to_hack_name_prefix.cc  package_generator.h  relative_include.cc  remove_cpp_noexcept_move.cc  remove_cpp_noexcept_move_test.py  remove_duplicate_namespaces.cc  specify_implicit_field_id.cc  specify_implicit_func_param_id.cc  structure_annotations.cc
thrift/compiler/generate/: CMakeLists.txt  TARGETS  build_templates.cc  common.cc  common.h  json.cc  mstch_objects.cc  mstch_objects.h  schema_populator.cc  semantic.cache  t_android_generator.cc  t_android_generator.h  t_android_lite_generator.cc  t_cocoa_generator.cc  t_concat_generator.cc  t_concat_generator.h  t_cpp_generator.cc  t_csharp_generator.cc  t_d_generator.cc  t_erl_generator.cc  t_generator.cc  t_generator.h  t_go_generator.cc  t_hack_generator.cc  t_hs_generator.cc  t_html_generator.cc  t_java_deprecated_generator.cc  t_java_deprecated_generator.h  t_java_generator.cc  t_java_generator.h  t_js_generator.cc  t_json_experimental_generator.cc  t_json_generator.cc  t_lua_generator.cc  t_mstch_cpp2_generator.cc  t_mstch_csharp_generator.cc  t_mstch_generator.cc  t_mstch_generator.h  t_mstch_html_generator.cc  t_mstch_java2_generator.cc  (+21 more)
thrift/compiler/lib/: reserved_identifier_name.h  uri.h
thrift/compiler/mustache/: mstch.cpp  mstch.h  mstch.hpp  render_context.cpp  render_context.h  render_context.hpp  template_type.cpp  template_type.h  template_type.hpp  token.cpp  token.h  token.hpp  utils.cpp  utils.h  utils.hpp
thrift/compiler/mutator/: mutator.cc  mutator.h
thrift/compiler/parse/: base_types.cc  base_types.h  endianness.h  lexer.cc  lexer.h  parser.cc  parser.h  parsing_driver.cc  parsing_driver.h  semantic.cache  t_annotated.h  t_base_type.h  t_const.h  t_const_value.h  t_container.h  t_doc.h  t_enum.h  t_enum_value.h  t_field.h  t_function.h  t_list.h  t_map.h  t_program.cc  t_program.h  t_ref.h  t_scope.h  t_service.cc  t_service.h  t_set.h  t_stream.h  t_struct.h  t_type.cc  t_type.h  t_typedef.cc  t_typedef.h  thriftl.ll  thrifty.yy  (+2 more)
thrift/conformance/: GTestHarness.cpp  GTestHarness.h  GTestHarnessTest.cpp  GTestRunner.cpp  RpcStructComparator.h  Utils.h
thrift/contrib/: TARGETS  parse_profiling.py  thrift.el  thrift_dump.cpp
thrift/doc/: Cpp2.md  FunctionSignatures.txt  HeaderFormat.md  README  StreamClasses.txt  index.md  intro.md  mstch.md  thrift.tex
thrift/example/: CMakeLists.txt
thrift/lib/: CMakeLists.txt  Makefile.am  setup.py
thrift/m4/: ax_boost_base.m4  ax_check_folly.m4
thrift/perf/: loadtest.py  semantic.cache
thrift/test/: AdapterTest.cpp  AdapterTest.h  AllProtocolTests.cpp  AllProtocolTests.tcc  AnnotationTest.cpp  AnnotationTest.thrift  AnyTest.cpp  AnyTest1.thrift  AnyTest2.thrift  AnyTest3.thrift  AsyncConnectionContextTest.cpp  Benchmark.cpp  Benchmark2.cpp  BenchmarkDeserialization.cpp  BenchmarkDeserialization.thrift  BitPackTest.cpp  Bitpack.thrift  BrokenConstants.thrift  ClearTest.cpp  ClientEventHandlerTest.cpp  ClientHandlerTest.java  CompactProtocolTest.cpp  CompactTest.thrift  CompressTest.cpp  ConstantsDemo.thrift  ConstantsTest.cpp  ContainerSize.h  ContainerSizeTest.cpp  CopyTest.cpp  Cpp2OpsCompat.thrift  Cpp2OpsNative.thrift  Cpp2OpsTest.cpp  Cpp2ProtocolTest.cpp  CppAllocatorTest.cpp  CppAllocatorTest.h  CppAllocatorTest.thrift  CppNameTest.cpp  CustomStruct.h  CustomStruct.thrift  CustomStructTest.cpp  (+239 more)
thrift/tutorial/: README.SSL  TARGETS  reverse.thrift  shared.thrift  tutorial.thrift
thrift/website/: docusaurus.config.js  package.json  sidebars.js
(+10934 files in other folders)
